Adjusted the alignment issues for the sidebar

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     --highlight-color: #ffd54f;
     --heading-font: 'Special Gothic Expanded One', serif;
     --body-font: 'Lato', sans-serif;
-    --accent-color: #ff6600;
+    --accent-color: #ffd54f;
     
     /* Grid variables */
     --grid-margin: 100px;
@@ -214,7 +214,7 @@ p, a, li, span {
     }
     
     .sidebar {
-        left: 30px; /* Fixed position on medium screens */
+        left: 70px; /* Fixed position on medium screens */
     }
     
     .main-content {
